# 1DSweptCUDA

./: .gitignore  1DSweptRule_main.cu  1DSweptRule_maintester.cu  1DSweptTiming.txt  CMakeLists.txt  CUDAoutline.m  CriticalCudaIndexes.txt  FunctionDiscretizations.cu  LICENSE  Makefile  MatlabPlot.m  PapersOfInterest.txt  README.md  SwR_1DHT_TriangleRegister.cu  SwR_1DRegisterForget.cu  SwR_1Dshared.cu  SwR_1Dshared.h  SwR_InitialCondiitons.cpp  SweptOut  SweptPyTest.py  SweptRule_1D_HT_Triangle.cu  SweptRule_1D_HT_TriangleShuffle.cu  examplerc.txt  getPaper.txt  notes.txt  octave-workspace  pythonPlot.py
Benchmarks/: Bandlatency.cu  BandwithvsLatency.txt  CPUBenchTiming.txt  GPUBenchTiming.txt  HeatOMP.cpp  Interface.py  KS_simple.py  NaiveGPUPDE1D.cu  ParaCPUPDE1D.cpp  SweptBenchPyTest.py  pythonBenchPlot.py
Functions/: FunctionDiscretizations.cu  HeatDiffusion.cu  KuramotoSivashinsky.cu
Papers/: doi.txt
Plotting/: MatlabHeat.m  MatlabPlot.m
RegisterSwept/: Euler1D_SweptRegister.cu  Heat1D_SweptRegister.cu  KS1D_SweptRegister.cu  Makefile  SwR_1DRegisterRetain.cu  SweptPyTest.py  registerPerformance.py
ResultPlots/: FoldingExample.m  Foldingexample.m  PlotREADME.md  sweptSchemeIllustration.m  sweptSchemeIllustration2.m
SharedSwept/: Euler1D_SweptShared.cu  Euler1D_SweptSharedNonStride.cu  Euler1D_SweptSharedReference.cu  Euler1D_SweptSharedTHREE.cu  Euler1D_SweptSharedTHREEVEC.cu  Heat1D_SweptShared.cu  KS1D_SweptShared.cu  KS1D_SweptShared2.cu  KS1D_SweptSharedWorking.cu  Makefile  SwR_1Dshared.cu  SwR_1Dshared.h  SweptPyTest.py  occupado.py  pythonPlot.py  (+3 more)
(+215 files in other folders)
